compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/neg/2.18.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 18
 * DESCRIPTION: The use of Boolean literals as the identifier (without backtick) in the typeAlias.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

typealias true = Boolean

private typealias false<T> = List<T>

internal typealias true<false> = Map<true<false>, List<true>>
